--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 	"activationEvents": [
 		"onCommand:cxx-tools.createclass"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/FilleKa/cpp-class-creator.git"
+	},
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
